# TP0-rust

./: .gitignore  readme.md
1_meteo/: Cargo.toml  meteo_malibu.csv  meteo_orleans.csv
1_meteo/src/: main.rs  main.rs~  tests.rs
2_sondage/: Cargo.toml
2_sondage/src/: main.rs  tests.rs  traitements.rs  types.rs
2_sondage/templates/: main.html  reponse.html  resultats.html  resultats2.html  vote.html
3_cafe/: Cargo.toml
3_cafe/src/: main.rs
