[package]
name = "jugement_maj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
async-io = "2.3.4"
axum = "0.7.7"
macro_rules_attribute = "0.2.0"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
smol-axum = "0.1.0"
smol-macros = "0.1.1"
